[testing] update JDK to 25