@@ -15,6 +15,11 @@ test {
   }
 
   failFast = false
+
+  jvmArgs "--enable-preview",
+          "--add-opens", "java.base/java.util=ALL-UNNAMED",
+          "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+          "-XX:+EnableDynamicAgentLoading"
 }
 
 subprojects {
