@@ -124,6 +124,7 @@
           <argLine>
             --add-opens="java.base/java.util=ALL-UNNAMED"
             --add-opens="java.base/java.lang=ALL-UNNAMED"
+            -XX:+EnableDynamicAgentLoading
           </argLine>
         </configuration>
       </plugin>
